# legal_ai_mvp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  quickstart_phase2.py  requirements.txt  setup_project.py
.github/workflows/: ci.yml
config/: config.py  database_config.py  llm_config.py
docker/: Dockerfile  run.txt
docs/: API.txt  architecture.md  deployment_strategy.md  secutity.txt  technology_stack.md
src/api/: main.py
src/data_processing/: chunking_strategy.py  document_processor.py  internal_structure.txt  metadata_extractor.py  pipeline.py  text_parser.py
src/database/: metadata_db.py  models.py  vector_db.py
src/embeddings/: text_embedder.py
src/search/: semantic_searcher.py
streamlit_app/: Dockerfile  app.py  requirements.txt
structure/: make_empty_init.txt  make_structure.py  setup_project.sh  structure.txt
tests/: test_phase2.py
