[tool.poetry]
name = "legal-ai-assistant"
version = "0.1.0"
description = "A RAG system for Iranian legal documents in the research and technology domain."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
chromadb = "^0.5.3"
langchain = "^0.2.11"
langchain-google-genai = "^1.0.7"
openai = "^1.36.1" # Kept for potential future use
tiktoken = "^0.7.0"
python-docx = "^1.1.2"
unstructured = "^0.14.10"
lxml = "^5.2.2"
python-multipart = "^0.0.9"
redis = "^5.0.7"
tenacity = "^8.5.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.5.5"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"